# supabase-ai-sql-query-generator

./: README.md  main.py  pyproject.toml
components/: __init__.py  connection_form.py  query_form.py  schema_explorer.py
services/: __init__.py  llm.py  supabase.py
