[project]
name = "supabase-ai-query-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "asyncpg>=0.31.0",
    "openai>=2.8.1",
    "psycopg>=3.2.13",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.51.0",
]
